--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<h1 id="bernhards-github-pages">Bernhard’s Github Pages</h1>
+<h2
+id="this-web-site-hosts-static-web-pages-i-write-from-time-to-time.">This
+web site hosts static web pages I write from time to time.</h2>
+<ul>
+<li>This <a href="dona.html">donation thermometer</a> is for <a
+href="https://www.kirche-ploen.de/">my church</a>.</li>
+</ul>
