Fixed nummerical formatting

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<h1 id="bernhards-github-pages">Bernhard’s Github Pages</h1>
+<h1 id="bernhards-github-pages"><a
+href="https://haubold.github.io/">Bernhard’s Github Pages</a></h1>
 <h2
 id="this-web-site-hosts-static-web-pages-i-write-from-time-to-time.">This
 web site hosts static web pages I write from time to time.</h2>
 <ul>
-<li>This <a href="dona.html">donation thermometer</a> is for <a
-href="https://www.kirche-ploen.de/">my church</a>.</li>
+<li>A <a href="dona.html">donation thermometer</a> for <a
+href="https://www.kirche-ploen.de/">my church</a>; I adapted it from <a
+href="https://github.com/RayHyde/thermometer">here</a>.</li>
 </ul>
