--- a/dona.html
+++ b/dona.html
@@ -18,13 +18,22 @@
   </head>
   <body>
     <h1>Spendenthermometer</h1>
-    <div id="thermometer-wrap">
-      <div id="thermometer">
-	<span class="current">&euro; <b>49.127</b></span>
-	<span class="goal">&euro; 100.000</span>
-	<div class="hilite"></div>
-      </div>
-      <script>$("#thermometer").thermometer();</script>
-    </div>
+    <table>
+      <tr>
+	<td>
+	  <img src="img/niko.png">
+	</td>
+	<td>
+	  <div id="thermometer-wrap">
+	    <div id="thermometer">
+	      <span class="current"> &euro; <b>49.127</b></span>
+	      <span class="goal">&euro; 100.000</span>
+	      <div class="hilite"></div>
+	    </div>
+	    <script>$("#thermometer").thermometer();</script>
+	  </div>
+	</td>
+      </tr>
+    </table>
   </body>
 </html>
